 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-5025: Fix flaky test failures in TestLoad.java (szita via rohini)

PIG-4939: QueryParserUtils.setHdfsServers(QueryParserUtils.java:104) should not be called for non-dfs
  methods (szita via daijy)

PIG-5034: Remove org.apache.hadoop.hive.serde2.objectinspector.primitive package (nkollar via daijy)

PIG-5036: Remove biggish from e2e input dataset (daijy)

PIG-5053: Can't change HDFS user home in e2e tests using Ant (nkollar via daijy)

PIG-5037: Add api getDisplayString to PigStats (zjffdu)

PIG-5020: Give file location for loadcaster related warning and errors (knoguchi)

PIG-5027: Improve SAMPLE Scalar Expression Example (icook via knoguchi)

PIG-5023: Documentation for BagToTuple (icook via knoguchi)

PIG-5022: Error in TOKENIZE Example (icook vi knoguchi)

PIG-4931: Document IN operator (dbist13 vi daijy)

PIG-4852: Add accumulator implementation for MaxTupleBy1stField (szita via daijy)

PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5061: ant test -Dtestcase=TestBoolean failing (knoguchi)

PIG-5066: e2e Jython_Checkin_2 failing due to floating precision difference (knoguchi)

PIG-5063: e2e IOErrors_1 on mapreduce is unstable (knoguchi)

PIG-5062: Allow Native e2e tests to run in parallel (knoguchi)

PIG-5060: TestPigRunner.testDisablePigCounters2 failing with tez (knoguchi)

PIG-5056: Fix AvroStorage writing enums (szita via daijy)
